// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression suggester handles negated parameters with projections and selections 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should filter global variables suggestions 1`] = `
[
  {
    "methodName": "#other",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
]
`;

exports[`expression suggester should filter uppercase global variables suggestions 1`] = `
[
  {
    "methodName": "#ANOTHER",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should not suggest anything for empty input 1`] = `[]`;

exports[`expression suggester should not suggest anything if suggestion already applied with space at the end 1`] = `[]`;

exports[`expression suggester should omit whitespace formatting in suggest for multiline code #1 1`] = `
[
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "B",
      "refClazzName": "org.B",
    },
  },
]
`;

exports[`expression suggester should omit whitespace formatting in suggest for multiline code #2 1`] = `
[
  {
    "fromClass": false,
    "methodName": "bazC",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
]
`;

exports[`expression suggester should omit whitespace formatting in suggest for multiline code #3 1`] = `
[
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "B",
      "refClazzName": "org.B",
    },
  },
]
`;

exports[`expression suggester should omit whitespace formatting in suggest for multiline code #4 1`] = `
[
  {
    "fromClass": false,
    "methodName": "bazC",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
]
`;

exports[`expression suggester should omit whitespace formatting in suggest for multiline code #5 1`] = `
[
  {
    "fromClass": false,
    "methodName": "toUpperCase",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest #this fields in projection after selection 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest #this fields in projection on union of lists 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest #this fields in simple projection 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest all global variables if # specified (multiline) 1`] = `
[
  {
    "methodName": "#input",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
  {
    "methodName": "#other",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
  {
    "methodName": "#ANOTHER",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
  {
    "methodName": "#dynamicMap",
    "refClazz": {
      "display": "Map",
      "fields": {
        "aField": {
          "display": "A",
          "refClazzName": "org.A",
        },
        "intField": {
          "display": "Integer",
          "refClazzName": "java.lang.Integer",
        },
      },
      "refClazzName": "java.util.Map",
    },
  },
  {
    "methodName": "#listVar",
    "refClazz": {
      "display": "WithList",
      "refClazzName": "org.WithList",
    },
  },
  {
    "methodName": "#util",
    "refClazz": {
      "display": "Util",
      "refClazzName": "org.Util",
    },
  },
  {
    "methodName": "#union",
    "refClazz": {
      "union": [
        {
          "display": "A",
          "refClazzName": "org.A",
        },
        {
          "display": "B",
          "refClazzName": "org.B",
        },
        {
          "display": "AA",
          "refClazzName": "org.AA",
        },
      ],
    },
  },
  {
    "methodName": "#unionOfLists",
    "refClazz": {
      "union": [
        {
          "params": [
            {
              "display": "A",
              "refClazzName": "org.A",
            },
          ],
          "refClazz": "java.util.List",
        },
        {
          "params": [
            {
              "display": "B",
              "refClazzName": "org.B",
            },
          ],
          "refClazz": "java.util.List",
        },
      ],
    },
  },
  {
    "methodName": "#dict",
    "refClazz": {
      "dict": {
        "id": "fooDict",
        "valueType": {
          "display": "A",
          "refClazzName": "org.A",
        },
      },
    },
  },
]
`;

exports[`expression suggester should suggest all global variables if # specified 1`] = `
[
  {
    "methodName": "#input",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
  {
    "methodName": "#other",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
  {
    "methodName": "#ANOTHER",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
  {
    "methodName": "#dynamicMap",
    "refClazz": {
      "display": "Map",
      "fields": {
        "aField": {
          "display": "A",
          "refClazzName": "org.A",
        },
        "intField": {
          "display": "Integer",
          "refClazzName": "java.lang.Integer",
        },
      },
      "refClazzName": "java.util.Map",
    },
  },
  {
    "methodName": "#listVar",
    "refClazz": {
      "display": "WithList",
      "refClazzName": "org.WithList",
    },
  },
  {
    "methodName": "#util",
    "refClazz": {
      "display": "Util",
      "refClazzName": "org.Util",
    },
  },
  {
    "methodName": "#union",
    "refClazz": {
      "union": [
        {
          "display": "A",
          "refClazzName": "org.A",
        },
        {
          "display": "B",
          "refClazzName": "org.B",
        },
        {
          "display": "AA",
          "refClazzName": "org.AA",
        },
      ],
    },
  },
  {
    "methodName": "#unionOfLists",
    "refClazz": {
      "union": [
        {
          "params": [
            {
              "display": "A",
              "refClazzName": "org.A",
            },
          ],
          "refClazz": "java.util.List",
        },
        {
          "params": [
            {
              "display": "B",
              "refClazzName": "org.B",
            },
          ],
          "refClazz": "java.util.List",
        },
      ],
    },
  },
  {
    "methodName": "#dict",
    "refClazz": {
      "dict": {
        "id": "fooDict",
        "valueType": {
          "display": "A",
          "refClazzName": "org.A",
        },
      },
    },
  },
]
`;

exports[`expression suggester should suggest dict variable methods 1`] = `
[
  {
    "fromClass": false,
    "methodName": "One",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
  {
    "fromClass": false,
    "methodName": "Two",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest dict variable methods using indexer syntax 1`] = `
[
  {
    "fromClass": false,
    "methodName": "Sentence with spaces and . dots",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest dict variable methods using indexer syntax 2`] = `
[
  {
    "fromClass": false,
    "methodName": "Sentence with spaces and . dots",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest dict variable methods using indexer syntax 3`] = `
[
  {
    "fromClass": false,
    "methodName": "Sentence with spaces and . dots",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest dict variable methods using indexer syntax 4`] = `
[
  {
    "fromClass": false,
    "methodName": "Sentence with spaces and . dots",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest embedded field in typed map 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest field in typed map 1`] = `
[
  {
    "methodName": "intField",
    "refClazz": {
      "display": "Integer",
      "refClazzName": "java.lang.Integer",
    },
  },
]
`;

exports[`expression suggester should suggest filtered global variable methods 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest filtered global variable methods based not on beginning of the method 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest for invocations with method parameters #1 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest for invocations with method parameters #2 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest for multiline code #1 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest for multiline code #2 1`] = `
[
  {
    "fromClass": false,
    "methodName": "bazC",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
]
`;

exports[`expression suggester should suggest for multiline code #3 1`] = `
[
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "B",
      "refClazzName": "org.B",
    },
  },
]
`;

exports[`expression suggester should suggest global variable 1`] = `
[
  {
    "methodName": "#input",
    "refClazz": {
      "display": "A",
      "refClazzName": "org.A",
    },
  },
]
`;

exports[`expression suggester should suggest global variable methods 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "B",
      "refClazzName": "org.B",
    },
  },
]
`;

exports[`expression suggester should suggest in complex expression #1 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest in complex expression #2 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest in complex expression #3 1`] = `
[
  {
    "fromClass": false,
    "methodName": "toUpperCase",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest methods for object returned from method 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest methods for object returned from method from union objects 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should suggest methods for union objects 1`] = `
[
  {
    "fromClass": false,
    "methodName": "fooString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "B",
      "refClazzName": "org.B",
    },
  },
  {
    "fromClass": false,
    "methodName": "bazC",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
  {
    "fromClass": false,
    "methodName": "barB",
    "refClazz": {
      "display": "C",
      "refClazzName": "org.C",
    },
  },
]
`;

exports[`expression suggester should support nested method invocations 1`] = `
[
  {
    "fromClass": false,
    "methodName": "toUpperCase",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;

exports[`expression suggester should support safe navigation 1`] = `
[
  {
    "fromClass": false,
    "methodName": "quaxString",
    "refClazz": {
      "display": "String",
      "refClazzName": "java.lang.String",
    },
  },
]
`;
